--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,7 +6,7 @@
     line-height: 16px;
     text-align: right;
     color: #FFFFFF;
-    margin: 0 0 0 ;
+    margin: 0 0 0 0;
     padding: 0;
 }
 
