--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover{
-    margin: 92px 3.75vw 92px 3.75vw;
+    margin: 92px 3.75% 92px 3.75%;
     position: relative;
     top: 0;
     left: 0;
