--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -10,6 +10,10 @@
     padding: 0;
 }
 
+.header__link:hover{
+    opacity: 0.8;
+}
+
 @media screen and (max-width: 465px) {
     .header__link {      
         font-size: 18px;
