--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -9,7 +9,7 @@
     color: #FFFFFF;
     padding: 0;
     margin: 8px auto 0 auto;
-    width: 77vw;
+    width: 77%;
 }
 
 @media screen and (max-width: 768px) {
