--- a/blocks/lead/images/lead__images.css
+++ b/blocks/lead/images/lead__images.css
@@ -1,7 +1,7 @@
 .lead__images{
     padding: 0;
     margin: 0 auto;
-    width: 77vw;
+    width: 77%;
     position: relative;
     top: 0;
     left: 0;    
