--- a/blocks/header/__links-lang/header__links-lang.css
+++ b/blocks/header/__links-lang/header__links-lang.css
@@ -1,6 +1,11 @@
 .header__links-lang{
     margin: 46px 48px 0 0;
     padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 }
 
 
