--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,19 +1,18 @@
 .intro{    
     padding: 0;
     margin: 92px auto 0 auto;
-    width: 77vw;
+    width: 77%;
 }
 
 @media screen and (max-width: 768px) {
     .intro {
-        margin: 88px 3vw 0 3vw;
-        width: 94vw;
+        margin: 88px 3% 0 3%;
+        width: 94%;
         }
 }
 
 @media screen and (max-width: 465px) {
     .intro {
-        margin: 64px 3vw 0 3vw;
-        width: 94vw;
+        margin: 64px 3% 0 3%;
     }
 } 
