--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,15 +1,15 @@
 .photo-grid{
-    margin: 92px 3.75vw;    
+    margin: 92px 3.75%;    
 }
 
 @media screen and (max-width: 768px) {
     .photo-grid{      
-        margin: 88px 3.75vw;
+        margin: 88px 3.75%;
     }
 } 
 
 @media screen and (max-width: 320px) {
     .photo-grid{      
-        margin: 64px 3.75vw;
+        margin: 64px 3.75%;
     }
 }
