--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,11 +1,11 @@
 .places{
     padding: 0;
-    margin: 0 11.5vw;
+    margin: 0 11.5%;
 }
 
 @media screen and (max-width: 768px){
     .places{      
-        margin: 0 5.75vw;
+        margin: 0 5.75%;
     }
 }
 
