--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,4 @@
-.cover__subtitle{
-    font-family: Inter;
+.cover__subtitle{    
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -8,7 +7,7 @@
     color: #FFFFFF;
     margin: 0;
     padding: 0;
-    width: 360px;
+    max-width: 360px;
 }
 
 
@@ -16,7 +15,6 @@
     .cover__subtitle{      
         font-size: 16px;
         line-height: 18px;
-        width: 310px;
     }
 }
 
@@ -24,6 +22,5 @@
     .cover__subtitle{      
         font-size: 14px;
         line-height: 16px;
-        width: 288px;
     }
 }
