--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,4 @@
-.cover__title{
-    font-family: Inter;
+.cover__title{    
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -8,15 +7,14 @@
     color: #FFFFFF;
     margin: 0 0 32px 0;
     padding: 0;
-    width: 560px;      
+    max-width: 560px;      
 }
 
 
 @media screen and (max-width: 565px){
     .cover__title{      
         font-size: 42px;
-        line-height: 46px;
-        width: 330px;
+        line-height: 46px;        
     }
 }
 
@@ -25,6 +23,5 @@
         font-size: 32px;
         line-height: 35px;
         margin: 0 0 16px 0;
-        width: 288px;
     }
 }
