--- a/blocks/digit/digit.css
+++ b/blocks/digit/digit.css
@@ -1,6 +1,6 @@
-.intro__item-list{    
+.digit{
     font-style: normal;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 12px;
     line-height: 18px;
     color: #FFFFFF;
