--- a/pages/index.css
+++ b/pages/index.css
@@ -11,8 +11,8 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__links-lang/header__links-lang.css);
 @import url(../blocks/header/__link/header__link.css);
-@import url(../blocks/header/__link/_lang/header__link_lang_ru.css);
-@import url(../blocks/header/__link/_lang/header__link_lang_en.css);
+@import url(../blocks/header/__link/_underline/header__link_underline.css);
+
 
 @import url(../blocks/main/main.css);
 
@@ -25,6 +25,7 @@
 @import url(../blocks/lead/__caption/lead__caption.css);
 
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/digit/digit.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__subtitle/intro__subtitle.css);
 @import url(../blocks/intro/__list/intro__list.css);
