--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,14 +1,27 @@
 .cover__link{
     width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    background-color: #2A2C2F;
-    opacity: 0.3;    
+    min-height: calc(92.5vw/1.6);
+    background-image: url(../../../images/cover-trains.jpg);
+    background-color: rgba(42, 44, 47, 0.3);
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 }
 
 .cover__link:hover{
-    opacity: 0.8;
+    background-color: rgba(42, 44, 47, 0.8);
 }
+
+@media screen and (max-width: 1024px){
+    .cover__link{
+        min-height: calc(98vw/1.6);
+    }
+}
+
+
+
