--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,6 +9,13 @@
     padding: 0;
 }
 
+@media screen and (max-width: 500px){
+    .footer__copyright{      
+        font-size: 12px;
+        line-height: 14px;
+    }
+}
+
 @media screen and (max-width: 465px){
     .footer__copyright{      
         line-height: 14px;
