--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,6 +13,13 @@
     opacity: 0.8;
 }
 
+@media screen and (max-width: 500px){
+    .footer__link{      
+        font-size: 12px;
+        line-height: 14px;
+    }
+}
+
 
 @media screen and (max-width: 465px){
     .footer__link{      
