--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 .photo-grid{
     margin: 92px 3.75%;
     display: grid;
-    gap: 1.5%;
+    gap: 1.5vw;
     grid-template-columns: repeat(4,minmax(22%, max-content));
 }
 
